docs: :memo: Add clock swagger to document endpoints
