# lib/timemanagerapp_web/controllers/clock_controller.ex
@@ -1,16 +1,23 @@
 defmodule TimeManagerAppWeb.ClockController do
   use TimeManagerAppWeb, :controller
+  use PhoenixSwagger
 
   alias TimeManagerApp.Time
   alias TimeManagerApp.Time.Clock
+  alias TimeManagerAppWeb.FallbackController
+  alias TimeManagerAppWeb.Swagger.ClockSwagger
 
-  action_fallback TimeManagerAppWeb.FallbackController
+  action_fallback FallbackController
 
+  Module.eval_quoted(__MODULE__, ClockSwagger.paths())
+
+  # GET /clocks/:user_id
   def index(conn, %{"user_id" => user_id}) do
     clocks = Time.list_clocks_for_user(user_id)
-    json(conn, %{clocks: clocks})
+    render(conn, "index.json", clocks: clocks)
   end
 
+  # POST /clocks/:user_id
   def create(conn, %{"user_id" => user_id, "clocks" => clock_params}) do
     case Time.create_clock_for_user(user_id, clock_params) do
       {:ok, clock} ->
@@ -35,5 +42,10 @@ defmodule TimeManagerAppWeb.ClockController do
       clock ->
         json(conn, %{clock: clock})
     end
+  end
+
+  # Swagger schema pour Clock
+  def swagger_definitions do
+    ClockSwagger.swagger_definitions()
   end
 end
